# boxes

./: .cspell.json  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  NEWS  README.md  ROADMAP.md  io.boxes.Boxes.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/agents/: boxes.md
boxes/: __init__.py  __main__.py  app.py  app_window.py  cli.py  constants.py  core.py  diagnostic_record.py  diagnostics.py  theme.py  theme_mode.py  util.py  worker.py
boxes/backends/: __init__.py  backend_capabilities.py  base_backend.py  hyperv_backend.py  kvm_device.py  libvirt_backend.py  macos_backend.py  qemu_backend.py  qemu_process.py  ssh_backend.py  ssh_config.py  type0_backend.py  xen_backend.py  xen_device.py
boxes/backends/qemu/: __init__.py  qemu_backend.py  qemu_process.py
boxes/backends/ssh/: __init__.py  ssh_backend.py  ssh_config.py
boxes/backends/type0/: __init__.py  kvm_device.py  type0_backend.py  xen_backend.py  xen_device.py
boxes/backends/window/: __init__.py  hyperv_backend.py  macos_backend.py
boxes/backends/windows/: __init__.py  macos_backend.py
boxes/dialogs/: __init__.py  about.py  config_page.py  display_tab.py  network_tab.py  new_vm.py  new_vm_assistant.py  preferences.py  preferences_dialog.py  resources_tab.py  source_page.py  storage_tab.py  summary_page.py
boxes/models/: __init__.py  collection.py  config.py  machine.py  machine_state.py  media.py  osdb.py
boxes/resources/: style.qss
boxes/resources/wrappers/: qemu-img.sh  qemu-system-x86_64.sh
boxes/services/: __init__.py  auth.py  download_manager.py  download_worker.py  downloader.py  export.py  firmware.py  iso_extractor.py  migration.py  osinfo.py  shared_folder.py  shared_folders.py  shared_folders_manager.py  snapshot.py  snapshot_manager.py  spice.py  template.py  unattended.py  usb.py
boxes/services/auth/: auth_manager.py
boxes/services/benchmark/: __init__.py  benchmark_runner.py
boxes/services/container/: __init__.py  podman_manager.py
boxes/services/download/: __init__.py  download_manager.py  download_worker.py  downloader.py
boxes/services/error_reporting/: __init__.py  sentry_reporter.py
boxes/services/export/: vm_exporter.py  vm_importer.py
boxes/services/firmware/: firmware_manager.py  ovmf_manager.py
boxes/services/install/: __init__.py  iso_extractor.py  unattended.py
boxes/services/vnc/: __init__.py  (+2 more)
boxes/ui/: __init__.py  collection_view.py  display_view.py  icon_view_delegate.py  list_view_delegate.py  searchbar.py  toast.py  toast_overlay.py  toast_widget.py  toolbar.py  toolbar_collection.py  toolbar_display.py  topbar.py
data/: io.boxes.Boxes.desktop  io.boxes.Boxes.metainfo.xml  io.boxes.boxes.gschema.xml
tests/: test_e2e.py  test_imports.py  test_integration.py  test_models.py  test_util.py
(+26 files in other folders)
